i added some more to the presentation

--- a/code/presentation.html
+++ b/code/presentation.html
@@ -3128,9 +3128,8 @@ slide:not(.current) .plotly.html-widget{
 <slide class=""><hgroup><h2><strong>Parental Involvement In School</strong></h2></hgroup><article  id="parental-involvement-in-school">
 
 <ul>
-<li>Bullet 1</li>
-<li>Bullet 2</li>
-<li>Bullet 3</li>
+<li>Parent involvement is related to success of children in school</li>
+<li>&ldquo;The research overwhelmingly demonstrates that parent involvement in children’s learning is positively related to achievement. Further, the research shows that the more intensively parents are involved in their children’s learning, the more beneficial are the achievement effects. This holds true for all types of parent involvement in children’s learning and for all types and ages of students.&rdquo; (cotton and Reed, 1989)</li>
 </ul>
 
 </article></slide><slide class=""><hgroup><h2><strong>Study Purpose</strong></h2></hgroup><article  id="study-purpose">
@@ -3144,14 +3143,18 @@ slide:not(.current) .plotly.html-widget{
 </article></slide><slide class=""><hgroup><h2><strong>PFI Questionnaire</strong></h2></hgroup><article  id="pfi-questionnaire">
 
 <ul>
-<li>Bullet 1</li>
-<li>Bullet 2</li>
+<li>Parent and Family Involvement in Education</li>
+<li>Conducted in 2016 by the National Center for Education Statistics</li>
+<li>Collected every two or three years</li>
+<li>14,075 completed interviews</li>
+<li>Parents respond about a selected child</li>
+<li>Includes homeschooled and enrolled children</li>
 </ul>
 
 </article></slide><slide class=""><hgroup><h2><strong>Research Questions and Hypotheses</strong></h2></hgroup><article  id="research-questions-and-hypotheses">
 
 <ul>
-<li>Bullet 1</li>
+<li>What are predictors of parent involvement in school?</li>
 <li>Bullet 2</li>
 <li>Bullet 3</li>
 </ul>
@@ -3159,9 +3162,10 @@ slide:not(.current) .plotly.html-widget{
 </article></slide><slide class=""><hgroup><h2><strong>Data Cleaning</strong></h2></hgroup><article  id="data-cleaning">
 
 <ul>
-<li>Bullet 1</li>
-<li>Bullet 2</li>
-<li>Bullet 3</li>
+<li>Recoded data to remove valid skips</li>
+<li>Converted some variables to 0 for no and 1 for yes to facilitate counting</li>
+<li>Created new variables for family activities, school involement and satisfaction with school</li>
+<li>Removed homeschooled children</li>
 </ul>
 
 </article></slide><slide class=""><hgroup><h2><strong>Participants/Demographics</strong></h2></hgroup><article  id="participantsdemographics">
@@ -3179,6 +3183,14 @@ slide:not(.current) .plotly.html-widget{
 <li>Dimension Reduction (EFA)</li>
 <li>Regression Analysis</li>
 </ul>
+
+</article></slide><slide class=""><hgroup><h2><strong>Variables of Interest</strong></h2></hgroup><article  id="variables-of-interest">
+
+<p>Age2015= Age of child as of December 31st, 2015 Hhtotalxx= number of people in the household Pargradex= parent or guardians highest level of education Ttlhhinc= total household income, categorical Scpubpri= child is enrolled in a public or private school Sneighbrx= parent moved to neighborhood for school Sefuturex=parent’s expectation for child’s future education (not finish HS to graduate school) RACEETH2- recoded race and ethnicity of child FA-count of at home activities. Comprised of: FOSTORY2X (told child a story past week), focrafts(did arts and crafts past week), fogames (played games with child past week), fobuildx (worked on prokect with child past week), fosport(played sports with child past week), forespon (discussed time management with child past week), fohistx (talked about family history with child past week), folibrayx (took child to library past month, fobookstx (took child to bookstore past month), foconcrtx (took child to concert past month), fomuseumx (took child to museum past month), fozoox (took child to zoo past month), fogroupx (attended event with child past month), fosprtevx (attend athletic event with child past month) SSatis- satisfaction with school. Comprised of: FCSHOOL (satisfaction with school child attends, FCTEACHR (satisfaction with teachers), FCSTDS (satisfaction with academic standards), FCORDER (satisfaction with order and discipline at school), FCSUPPRT (satisfaction with way school interacts with parents</p>
+
+</article></slide><slide class=""><hgroup><h2><strong>Outcome Variable</strong></h2></hgroup><article  id="outcome-variable">
+
+<p>FS- count of school activities parent participated in. Comprised of:<br/>FSSPORTX (attended school or class event, science fair, etc.), FSVOL(volunteered at school), FSMTNG(attended a general school meeting), FSPTMTNG (attended a PTA meeting, FSATCNFN ( gone to a parent teacher conference), FSFUNDRS (participated in fundraising for the school), FSCOMMTE (served on a school committee), FSCOUNSLR (met with the guidance counselor in person).</p>
 
 </article></slide><slide class=""><hgroup><h2><strong>Results: Dimensionality Reduction</strong></h2></hgroup><article  id="results-dimensionality-reduction">
 
