finalized report and presentation
uploading final report and presentation to repository

--- a/andychanges.html
+++ b/andychanges.html
@@ -3129,15 +3129,13 @@ slide:not(.current) .plotly.html-widget{
 
 <ul>
 <li>Parent involvement is related to success of children in school</li>
-<li>&ldquo;The research overwhelmingly demonstrates that parent involvement in children’s learning is positively related to achievement. Further, the research shows that the more intensively parents are involved in their children’s learning, the more beneficial are the achievement effects. This holds true for all types of parent involvement in children’s learning and for all types and ages of students.&rdquo; (cotton and Reed, 1989)</li>
+<li>&ldquo;The research overwhelmingly demonstrates that parent involvement in children’s learning is positively related to achievement. Further, the research shows that the more intensively parents are involved in their children’s learning, the more beneficial are the achievement effects. This holds true for all types of parent involvement in children’s learning and for all types and ages of students.&rdquo; (Cotton and Reed, 1989)</li>
 </ul>
 
 </article></slide><slide class=""><hgroup><h2><strong>Study Purpose</strong></h2></hgroup><article  id="study-purpose">
 
 <ul>
-<li>Bullet 1</li>
-<li>Bullet 2</li>
-<li>Bullet 3</li>
+<li>To better understand factors impacting parent participation at their child’s school</li>
 </ul>
 
 </article></slide><slide class=""><hgroup><h2><strong>PFI Questionnaire</strong></h2></hgroup><article  id="pfi-questionnaire">
@@ -3153,10 +3151,10 @@ slide:not(.current) .plotly.html-widget{
 
 </article></slide><slide class=""><hgroup><h2><strong>Research Questions and Hypotheses</strong></h2></hgroup><article  id="research-questions-and-hypotheses">
 
-<ul>
-<li>What are predictors of parent involvement in school?</li>
-<li></li>
-</ul>
+<ol>
+<li>Are the questions related to parental involvement of educational activities at home and school unidimensional? If not, what is the internal structure of these items?</li>
+<li>What factors are related to parental involvement in school-based activities?</li>
+</ol>
 
 </article></slide><slide class=""><hgroup><h2><strong>Data Cleaning</strong></h2></hgroup><article  id="data-cleaning">
 
@@ -3166,8 +3164,6 @@ slide:not(.current) .plotly.html-widget{
 <li>Created new variables for family activities, school involement and satisfaction with school</li>
 <li>Removed homeschooled children</li>
 </ul>
-
-</article></slide><slide class=""><hgroup><h2><strong>Participants/Demographics</strong></h2></hgroup><article  id="participantsdemographics">
 
 </article></slide><slide class=""><hgroup><h2><strong>Variables of Interest</strong></h2></hgroup><article  id="variables-of-interest">
 
@@ -3187,123 +3183,222 @@ slide:not(.current) .plotly.html-widget{
 
 <p>RACEETH2- recoded race and ethnicity of child</p>
 
-</article></slide><slide class=""><hgroup><h2><strong>family activites measures</strong></h2></hgroup><article  id="family-activites-measures">
+</article></slide><slide class=""><hgroup><h2><strong>Participants/Demographics</strong></h2></hgroup><article  id="participantsdemographics">
 
-<p>FA-count of at home activities. Comprised of: FOSTORY2X (told child a story past week), focrafts(did arts and crafts past week), fogames (played games with child past week), fobuildx (worked on prokect with child past week), fosport(played sports with child past week), forespon (discussed time management with child past week), fohistx (talked about family history with child past week), folibrayx (took child to library past month, fobookstx (took child to bookstore past month), foconcrtx (took child to concert past month), fomuseumx (took child to museum past month), fozoox (took child to zoo past month), fogroupx (attended event with child past month), fosprtevx (attend athletic event with child past month)</p>
+<pre >            mean   sd min max
+sneighbrx   0.18 0.39   0   1
+allgradex*  7.13 3.44   1  12
+hhtotalxx   4.03 1.22   2  10
+AGE2015    12.05 3.79   3  20
+public      0.89 0.32   0   1</pre>
 
-</article></slide><slide class=""><hgroup><h2>slide for school satisfaction survey</h2></hgroup><article  id="slide-for-school-satisfaction-survey">
+<p>Most students attended public school. The mean household size was 4 and the average age was 12.</p>
 
-<p>SSatis- satisfaction with school. Comprised of: FCSHOOL (satisfaction with school child attends, FCTEACHR (satisfaction with teachers), FCSTDS (satisfaction with academic standards), FCORDER (satisfaction with order and discipline at school), FCSUPPRT (satisfaction with way school interacts with parents</p>
+</article></slide><slide class=""><hgroup><h2><strong>Parent Expectations</strong></h2></hgroup><article  id="parent-expectations">
 
-</article></slide><slide class=""><hgroup><h2><strong>Analysis</strong></h2></hgroup><article  id="analysis">
+<table class = 'rmdtable'>
+<tr class="header">
+<th align="left">Parental Expectation</th>
+<th align="center">&lt;HS</th>
+<th align="left">HS</th>
+<th align="left">TS</th>
+<th align="left">Assoc</th>
+<th align="left">BA/BS</th>
+<th align="left">Professional</th>
+</tr>
+<tr class="odd">
+<td align="left">percent</td>
+<td align="center">1</td>
+<td align="left">9</td>
+<td align="left">8</td>
+<td align="left">15</td>
+<td align="left">29</td>
+<td align="left">39</td>
+</tr>
+</table>
+
+</article></slide><slide class=""><hgroup><h2><strong>Exploratory Factor Analysis</strong></h2></hgroup><article  id="exploratory-factor-analysis">
 
 <ul>
-<li>Descriptive Statistics</li>
-<li>Regression Analysis</li>
+<li>The EFA supported a 3-factor structure with 18 items. The items were chosen based on their factor loading ( greater than 0.30)</li>
+<li>A fair number of the items had low communalities, indicating their they do not share much variance with other items on the questionnaire.</li>
+<li>9 items elminated because they failed to meet a minimum criterion a simple structure.</li>
+<li>We were able to create three subscales, parental involvement in school-based activities, parental involvement in educational activities at homes, and satisfaction with school.</li>
 </ul>
 
-</article></slide><slide class=""><hgroup><h2><strong>Variables for regression, means, etc Descriptives</strong></h2></hgroup><article  id="variables-for-regression-means-etc-descriptives">
+</article></slide><slide class=""><hgroup><h2><strong>Descriptive Analysis (Correlations)</strong></h2></hgroup><article  id="descriptive-analysis-correlations">
+
+<p>There were correlations between family activities and participation in school</p>
+
+<pre >               FS          FA     SSatis      public
+FS      1.0000000  0.34527862 -0.2010948 -0.20784771
+FA      0.3452786  1.00000000 -0.1031395 -0.01757768
+SSatis -0.2010948 -0.10313951  1.0000000  0.14404284
+public -0.2078477 -0.01757768  0.1440428  1.00000000</pre>
+
+</article></slide><slide class=""><hgroup><h2><strong>Family Activities Measure</strong></h2></hgroup><article  id="family-activities-measure">
 
 <ul>
-<li>Bullet 1</li>
-<li>Bullet 2</li>
-<li>Bullet 3</li>
+<li><p>FA-count of at home activities</p></li>
+<li><p>FOSTORY2X (told child a story past week)</p></li>
+<li><p>focrafts(did arts and crafts past week)</p></li>
+<li><p>fogames (played games with child past week)</p></li>
+<li><p>fobuildx (worked on prokect with child past week)</p></li>
+<li><p>fosport(played sports with child past week)</p></li>
+<li><p>forespon (discussed time management with child past week)</p></li>
+<li><p>fohistx (talked about family history with child past week)</p></li>
+<li><p>folibrayx (took child to library past month,</p></li>
+<li><p>fobookstx (took child to bookstore past month)</p></li>
+<li><p>foconcrtx (took child to concert past month)</p></li>
+<li><p>fomuseumx (took child to museum past month)</p></li>
+<li><p>fozoox (took child to zoo past month)</p></li>
+<li><p>fogroupx (attended event with child past month)</p></li>
+<li><p>fosprtevx (attend athletic event with child past month)</p></li>
+</ul>
+
+<table class = 'rmdtable'>
+<col width="19.101124%" />
+<col width="10.112360%" />
+<col width="12.359551%" />
+<col width="13.483146%" />
+<col width="8.988764%" />
+<col width="5.617978%" />
+<col width="19.101124%" />
+<col width="11.235955%" />
+<tr class="header">
+<th align="left">Family activity</th>
+<th align="center">Library</th>
+<th align="left">Bookstore</th>
+<th align="left">Live event</th>
+<th align="left">Museum</th>
+<th align="left">Zoo</th>
+<th align="left">Community event</th>
+<th align="left">Athletic</th>
+</tr>
+<tr class="odd">
+<td align="left">Value</td>
+<td align="center">34</td>
+<td align="left">34</td>
+<td align="left">34</td>
+<td align="left">25</td>
+<td align="left">24</td>
+<td align="left">54</td>
+<td align="left">42</td>
+</tr>
+</table>
+
+</article></slide><slide class=""><hgroup><h2><strong>School Satisfaction Items</strong></h2></hgroup><article  id="school-satisfaction-items">
+
+<ul>
+<li><p>SSatis- satisfaction with school</p></li>
+<li><p>FCSHOOL (satisfaction with school child attends</p></li>
+<li><p>FCTEACHR (satisfaction with teachers)</p></li>
+<li><p>FCSTDS (satisfaction with academic standards)</p></li>
+<li><p>FCORDER (satisfaction with order and discipline at school)</p></li>
+<li><p>FCSUPPRT (satisfaction with way school interacts with parents</p></li>
 </ul>
 
 </article></slide><slide class=""><hgroup><h2><strong>Outcome Variable</strong></h2></hgroup><article  id="outcome-variable">
 
-<p>FS- count of school activities parent participated in. Comprised of:<br/>FSSPORTX (attended school or class event, science fair, etc.), FSVOL(volunteered at school), FSMTNG(attended a general school meeting), FSPTMTNG (attended a PTA meeting, FSATCNFN ( gone to a parent teacher conference), FSFUNDRS (participated in fundraising for the school), FSCOMMTE (served on a school committee), FSCOUNSLR (met with the guidance counselor in person).</p>
+<ul>
+<li>FS- count of school activities parent participated in Comprised of-</li>
+<li>FSSPORTX (attended school or class event, science fair, etc.)</li>
+<li>FSVOL(volunteered at school)</li>
+<li>FSMTNG(attended a general school meeting)</li>
+<li>FSPTMTNG (attended a PTA meeting</li>
+<li>FSATCNFN ( gone to a parent teacher conference)</li>
+<li>FSFUNDRS (participated in fundraising for the school)</li>
+<li>FSCOMMTE (served on a school committee)</li>
+<li>FSCOUNSLR (met with the guidance counselor in person)</li>
+</ul>
+
+</article></slide><slide class=""><hgroup><h2><strong>Summary of Created Variables</strong></h2></hgroup><article  id="summary-of-created-variables">
+
+<pre >       mean   sd min max
+fsfreq 7.92 8.99   0  99
+FS     4.01 1.79   0   7
+FA     2.96 1.69   0   6
+SSatis 7.65 3.01   5  20</pre>
+
+<p>Mean participation at school was 4 discrete activities</p>
 
 </article></slide><slide class=""><hgroup><h2><strong>Multiple Regression Model</strong></h2></hgroup><article  id="multiple-regression-model">
 
-<p>Residuals: Min 1Q Median 3Q Max -5.7709 -1.0177 0.0583 1.0501 5.4114</p>
 
-<p>Coefficients: Estimate Std. Error t value Pr(&gt;|t|)<br/>(Intercept) 3.224210 0.116115 27.767 &lt;2e-16 <strong><em> AGE2015 -0.070933 0.004016 -17.662 &lt;2e-16 </em></strong> hhtotalxx 0.011937 0.010832 1.102 0.2705<br/>pargradex 0.199829 0.014607 13.680 &lt;2e-16 <strong><em> ttlhhinc 0.087108 0.005825 14.955 &lt;2e-16 </em></strong> FA 0.260147 0.008965 29.018 &lt;2e-16 <strong><em> SSatis -0.054204 0.004512 -12.013 &lt;2e-16 </em></strong> public -0.768399 0.042936 -17.896 &lt;2e-16 <strong><em> sneighbrx 0.073768 0.034558 2.135 0.0328 </em><br/>sefuturex 0.125544 0.011685 10.744 &lt;2e-16 </strong>* — Signif. codes: 0 &lsquo;<em><strong>’ 0.001 ‘</strong>’ 0.01 ‘</em>&rsquo; 0.05 &lsquo;.&rsquo; 0.1 ‘ ’ 1 Residual standard error: 1.524 on 13513 degrees of freedom Multiple R-squared: 0.2726, Adjusted R-squared: 0.2721 F-statistic: 562.7 on 9 and 13513 DF, p-value: &lt; 2.2e-16</p>
 
-</article></slide><slide class=""><hgroup><h2>**Regression output </h2></hgroup><article  id="regression-output">
+<pre >
+Call:
+lm(formula = FS ~ AGE2015 + hhtotalxx + AGE2015 + pargradex + 
+    ttlhhinc + FA + SSatis + public + sneighbrx + sefuturex, 
+    data = parinv)
 
-<pre >## 
-## Call:
-## lm(formula = FS ~ AGE2015 + hhtotalxx + AGE2015 + pargradex + 
-##     ttlhhinc + FA + SSatis + public + sneighbrx + sefuturex, 
-##     data = parinv)
-## 
-## Residuals:
-##     Min      1Q  Median      3Q     Max 
-## -5.7709 -1.0177  0.0583  1.0501  5.4114 
-## 
-## Coefficients:
-##              Estimate Std. Error t value Pr(&gt;|t|)    
-## (Intercept)  3.224210   0.116115  27.767   &lt;2e-16 ***
-## AGE2015     -0.070933   0.004016 -17.662   &lt;2e-16 ***
-## hhtotalxx    0.011937   0.010832   1.102   0.2705    
-## pargradex    0.199829   0.014607  13.680   &lt;2e-16 ***
-## ttlhhinc     0.087108   0.005825  14.955   &lt;2e-16 ***
-## FA           0.260147   0.008965  29.018   &lt;2e-16 ***
-## SSatis      -0.054204   0.004512 -12.013   &lt;2e-16 ***
-## public      -0.768399   0.042936 -17.896   &lt;2e-16 ***
-## sneighbrx    0.073768   0.034558   2.135   0.0328 *  
-## sefuturex    0.125544   0.011685  10.744   &lt;2e-16 ***
-## ---
-## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
-## 
-## Residual standard error: 1.524 on 13513 degrees of freedom
-## Multiple R-squared:  0.2726, Adjusted R-squared:  0.2721 
-## F-statistic: 562.7 on 9 and 13513 DF,  p-value: &lt; 2.2e-16</pre>
+Residuals:
+    Min      1Q  Median      3Q     Max 
+-5.7709 -1.0177  0.0583  1.0501  5.4114 
+
+Coefficients:
+             Estimate Std. Error t value Pr(&gt;|t|)    
+(Intercept)  3.224210   0.116115  27.767   &lt;2e-16 ***
+AGE2015     -0.070933   0.004016 -17.662   &lt;2e-16 ***
+hhtotalxx    0.011937   0.010832   1.102   0.2705    
+pargradex    0.199829   0.014607  13.680   &lt;2e-16 ***
+ttlhhinc     0.087108   0.005825  14.955   &lt;2e-16 ***
+FA           0.260147   0.008965  29.018   &lt;2e-16 ***
+SSatis      -0.054204   0.004512 -12.013   &lt;2e-16 ***
+public      -0.768399   0.042936 -17.896   &lt;2e-16 ***
+sneighbrx    0.073768   0.034558   2.135   0.0328 *  
+sefuturex    0.125544   0.011685  10.744   &lt;2e-16 ***
+---
+Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
+
+Residual standard error: 1.524 on 13513 degrees of freedom
+Multiple R-squared:  0.2726,    Adjusted R-squared:  0.2721 
+F-statistic: 562.7 on 9 and 13513 DF,  p-value: &lt; 2.2e-16</pre>
 
 </article></slide><slide class=""><hgroup><h2><strong>Poisson Model</strong></h2></hgroup><article  id="poisson-model">
 
-<pre >## 
-## Call:
-## glm(formula = FS ~ AGE2015 + hhtotalxx + AGE2015 + pargradex + 
-##     ttlhhinc + FA + SSatis + public + sneighbrx + sefuturex, 
-##     family = poisson(), data = parinv)
-## 
-## Deviance Residuals: 
-##     Min       1Q   Median       3Q      Max  
-## -3.4397  -0.5443   0.0289   0.5053   2.6498  
-## 
-## Coefficients:
-##              Estimate Std. Error z value Pr(&gt;|z|)    
-## (Intercept)  1.095827   0.038737  28.289   &lt;2e-16 ***
-## AGE2015     -0.016818   0.001307 -12.866   &lt;2e-16 ***
-## hhtotalxx    0.004260   0.003602   1.182    0.237    
-## pargradex    0.051818   0.004926  10.520   &lt;2e-16 ***
-## ttlhhinc     0.022283   0.001959  11.372   &lt;2e-16 ***
-## FA           0.066241   0.002983  22.208   &lt;2e-16 ***
-## SSatis      -0.014556   0.001554  -9.367   &lt;2e-16 ***
-## public      -0.162918   0.012828 -12.700   &lt;2e-16 ***
-## sneighbrx    0.015885   0.011133   1.427    0.154    
-## sefuturex    0.035777   0.004083   8.762   &lt;2e-16 ***
-## ---
-## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
-## 
-## (Dispersion parameter for poisson family taken to be 1)
-## 
-##     Null deviance: 13187  on 13522  degrees of freedom
-## Residual deviance: 10243  on 13513  degrees of freedom
-## AIC: 52140
-## 
-## Number of Fisher Scoring iterations: 4</pre>
+<pre >
+Call:
+glm(formula = FS ~ AGE2015 + hhtotalxx + AGE2015 + pargradex + 
+    ttlhhinc + FA + SSatis + public + sneighbrx + sefuturex, 
+    family = poisson(), data = parinv)
+
+Deviance Residuals: 
+    Min       1Q   Median       3Q      Max  
+-3.4397  -0.5443   0.0289   0.5053   2.6498  
+
+Coefficients:
+             Estimate Std. Error z value Pr(&gt;|z|)    
+(Intercept)  1.095827   0.038737  28.289   &lt;2e-16 ***
+AGE2015     -0.016818   0.001307 -12.866   &lt;2e-16 ***
+hhtotalxx    0.004260   0.003602   1.182    0.237    
+pargradex    0.051818   0.004926  10.520   &lt;2e-16 ***
+ttlhhinc     0.022283   0.001959  11.372   &lt;2e-16 ***
+FA           0.066241   0.002983  22.208   &lt;2e-16 ***
+SSatis      -0.014556   0.001554  -9.367   &lt;2e-16 ***
+public      -0.162918   0.012828 -12.700   &lt;2e-16 ***
+sneighbrx    0.015885   0.011133   1.427    0.154    
+sefuturex    0.035777   0.004083   8.762   &lt;2e-16 ***
+---
+Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
+
+(Dispersion parameter for poisson family taken to be 1)
+
+    Null deviance: 13187  on 13522  degrees of freedom
+Residual deviance: 10243  on 13513  degrees of freedom
+AIC: 52140
+
+Number of Fisher Scoring iterations: 4</pre>
 
 </article></slide><slide class=""><hgroup><h2><strong>Discussion</strong></h2></hgroup><article  id="discussion">
 
 <ul>
-<li>These factors will help you predict if parents will participate in school activities</li>
-<li>These factors cluster into three constructs related to parental involvement in school</li>
-<li>If the child goes to private school</li>
-<li>If they engage in educational activities at home</li>
-<li>Parent’s level of education</li>
-<li>Satisfaction with the school</li>
-<li>Age of student negatively impacts</li>
-</ul>
-
-</article></slide><slide class=""><hgroup><h2><strong>Future Implications</strong></h2></hgroup><article  id="future-implications">
-
-<ul>
-<li>Bullet 1</li>
-<li>Bullet 2</li>
-<li>Bullet 3</li>
+<li><p>We identified factors that help predict if parents will participate in school activities</p></li>
+<li><p>-Best predictors were</p></li>
+<li><p>Engage in educational activities at home</p></li>
+<li><p>Parent’s level of education</p></li>
+<li><p>expectations for the child’s educational attainment</p></li>
+<li><p>Age of student and attandance at a public school negatively impact participation</p></li>
 </ul>
 
 </article></slide><slide class=""><hgroup><h2><strong>THANK YOU!</strong></h2></hgroup><article  id="thank-you"></article></slide>
